--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
                 <textarea name="comentarios"  class="form__input-text form__input-text--active"  rows="5" placeholder="introduzca su texto"></textarea>
                 <label class="form__render">
                 <input  id="checkr" type="checkbox" name="terminos" value="acepto" class="form__terms-Conditions  form__terms-Conditions--checked"/>
-                <div class="form__hidden"></div>
+                <div class="form__hidden">
+                    <svg class="form__checkbox" width="20" height="20">
+                        <use href="./images/svg/icons.svg#checked-icon"></use>
+                    </svg> 
+                </div>
                 <p class="form__warning">Estoy de acuerdo con el boletín informativo y acepto los Términos y Condiciones.</p>
                 </label>
                 <div class="form__center">
