--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/modern-normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
@@ -340,11 +340,13 @@
             <a href="#" class="content-footer__logo-footing">WebStudio</a>
               <h5 class="content-footer__adress">Calz. Ticomán 500, Ciudad de México, CDMX, México</h5>
             <ul>
+
                 <li class="content-footer__links"><a href="mailto:info@example.com" id="correo-footer" class="content-footer__linkage content-footer__linkage--active">info@example.com</a></li>
                 <li class="content-footer__links"><a href="tel:+575555296000" id="telefono-footer" class="content-footer__linkage content-footer__linkage--active">+575555296000</a></li>
             </ul>
             </div>
             <div class="content-footer__container">
+
                 <h6 class="content-footer__networks">ENCUENTRENOS EN:</h6>
                 <ul class="content-footer__social-networks">
                     <div class="content-footer__logo-footer content-footer__logo-footer--active">
@@ -389,6 +391,6 @@
             </svg>
         </button>
         </div>    
-       </footer>
+       </footer>   
    </body>
 </html>
